--- a/packages/SystemUI/res/values/404_strings.xml
+++ b/packages/SystemUI/res/values/404_strings.xml
@@ -78,4 +78,10 @@
     <string name="quick_settings_powershare_off_powersave_label">Battery Share off\nBattery saver</string>
     <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
     <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
+    
+    <!-- Sound QS Tile -->
+    <string name="quick_settings_sound_label">Sound</string>
+    <string name="quick_settings_sound_ring">Ring</string>
+    <string name="quick_settings_sound_vibrate">Vibrate</string>
+    <string name="quick_settings_sound_silent">Silent</string>
 </resources>
